# cvm-

./: .gitignore  CMakeLists.txt  README.md  instructions.txt
report/: REPORT.html  REPORT.md
samples/: calculator.cvm  fibonacci.cvm  fizzbuzz.cvm  functions_demo.cvm  strings_demo.cvm  truth_machine.cvm
src/: ast.h  ast_printer.cpp  ast_printer.h  chunk.cpp  chunk.h  common.h  compiler.cpp  compiler.h  disassembler.cpp  disassembler.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  repl.cpp  repl.h  serializer.cpp  serializer.h  value.cpp  value.h  vm.cpp  vm.h
